♻️ リファクタ少々(名前とかコメントとか...)

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             <video id="camera" autoplay playsinline class="object-contain w-[360px] h-[180px] bg-[#444444] rounded-lg shadow"></video>
             <!-- 絵描きボードのようなタグ -->
             <!-- JSでどんなものを描くか指示する -->
-            <canvas id="canvas" style="display:none;"></canvas>
+            <canvas id="video-canvas" style="display:none;"></canvas>
             <!-- 結果表示 -->
             <p id="result" class="w-1/2 break-words text-xl text-black">感情：-</p>
         </div>
